[package]
name = "wfb_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
nix = { version= "0.30.1", features = ["socket", "net", "ioctl", "poll", "uio"]}
pcap = "2.2.0"
radiotap = "1.3.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
