[package]
name = "wfb_rs"
version = "0.2.1"
edition = "2021"


[[bin]]
name = "wfb_rs_tx"
path = "src/bin/tx_cli.rs"

[[bin]]
name = "wfb_rs_rx"
path = "src/bin/rx_cli.rs"
required-features = ["receiver"]

[features]
default = []
receiver = ["pcap", "radiotap"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.175"
pcap = { version = "2.2.0", optional = true }
radiotap = { version = "1.3.0", optional = true }
raptorq = "2.0.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
